# Calendar-Scheduling-OpenEnv

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  task_definitions.py
scripts/: validate-submission.sh
server/: __init__.py  app.py  environment.py
tests/: test_environment.py  test_grader_guards.py  test_inference_logging.py  test_inference_policy.py
